syntax = "proto3";

package api.v1.service_account;

import "google/protobuf/timestamp.proto";
import "model/author.proto";

message Entry {
  string service_account_id = 1;
  ServiceAccount service_account = 2;
  string client_id = 3;
}

message ServiceAccount {
  string name = 1;
  google.protobuf.Timestamp created_at = 2;
  model.Author created_by = 3;
  bool managed = 4;
}
